# howth

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  noglue.yaml  rust-toolchain.toml  test-config-plan.md
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml  release.yml
.kailab/workflows/: ci.yml  docker.yml  pages.yml  release.yml
benchmarks/: gcp-c3-highcpu-8-full-results.json  gcp-c3-highcpu-8-full-results.txt  gcp-c3-highcpu-8-results.txt
crates/fastnode-bench/: Cargo.toml
crates/fastnode-cli/: Cargo.toml  build.rs  napi_symbols.txt
crates/fastnode-cli/src/: compat.rs  logging.rs  main.rs
crates/fastnode-cli/src/commands/: build.rs  bundle.rs  create.rs  daemon.rs  dev.rs  doctor.rs  exec.rs  init.rs  install.rs  js_plugin.rs  link.rs  mod.rs  ping.rs  pkg.rs  run.rs  stop.rs  test.rs  version.rs  watch.rs  workspaces.rs
crates/fastnode-cli/src/commands/bench/: build.rs  bundler.rs  http.rs  install.rs  mod.rs  smoke.rs  test.rs
crates/fastnode-cli/tests/: bench_smoke_json.rs  build_json.rs  daemon_ping.rs  doctor_json.rs  pkg_add_deps.rs  pkg_doctor.rs  pkg_explain.rs  pkg_graph.rs  pkg_install.rs  pkg_why.rs  run_plan.rs  watch_invalidate.rs
crates/fastnode-compat/: Cargo.toml
crates/fastnode-compat/src/: lib.rs
crates/fastnode-core/: Cargo.toml
crates/fastnode-core/src/: config.rs  error.rs  lib.rs  paths.rs  runplan.rs  version.rs
crates/fastnode-core/src/bench/: build.rs  bundler.rs  http.rs  install.rs  mod.rs  rusage.rs  smoke.rs  stats.rs  test.rs
crates/fastnode-core/src/bundler/: assets.rs  chunks.rs  emit.rs  graph.rs  mod.rs  plugin.rs  resolve.rs  scope.rs  treeshake.rs
crates/fastnode-core/src/bundler/plugins/: mod.rs  react_refresh.rs
crates/fastnode-core/src/compiler/: ast_parser.rs  backend.rs  mod.rs  spec.rs  swc.rs
crates/fastnode-core/src/css/: mod.rs  sass.rs
crates/fastnode-core/src/dev/: config.rs  env.rs  hmr.rs  mod.rs  prebundle.rs  rewrite.rs  transform.rs
crates/fastnode-core/src/doctor/: capabilities.rs  collectors.rs  mod.rs
crates/fastnode-core/src/imports/: mod.rs  scan.rs
crates/fastnode-core/src/pkg/: cache.rs  deps.rs  doctor.rs  error.rs  explain.rs  graph.rs  link.rs  lockfile.rs  mod.rs  npmrc.rs  registry.rs  resolve.rs  spec.rs  tarball.rs  version.rs  workspaces.rs
crates/fastnode-core/src/resolver/: exports.rs  mod.rs  pkg_json_cache.rs  trace.rs  v0.rs
crates/fastnode-core/tests/: rolldown_bench_test.rs
crates/fastnode-daemon/: Cargo.toml
crates/fastnode-daemon/src/: cache.rs  lib.rs  pkg.rs  server.rs  state.rs  test_worker.mjs  test_worker.rs  v8_test_worker.rs
crates/fastnode-daemon/src/ipc/: mod.rs  unix.rs  windows.rs
crates/fastnode-daemon/src/watch/: mod.rs
crates/fastnode-proto/: Cargo.toml
crates/fastnode-runtime/: Cargo.toml  build.rs
crates/fastnode-runtime/src/: bootstrap.js  lib.rs  module_loader.rs  ops.rs  runtime.rs
crates/fastnode-runtime/src/napi/: js_native_api.rs  mod.rs  node_api.rs  util.rs  uv.rs
crates/fastnode-util/: Cargo.toml
crates/howth-parser/: Cargo.toml
crates/howth-parser/benches/: lexer.rs
crates/howth-parser/examples/: parse_ts_dir.rs  test_arena.rs  test_parse.rs  test_single_ts.rs  test_ts_parse.rs
crates/howth-parser/src/: arena.rs  ast.rs  ast_arena.rs  codegen.rs  jsx.rs  lexer.rs  lib.rs  mangle.rs  parser.rs  parser_arena.rs  span.rs  token.rs  typescript.rs
crates/napi-sym/: Cargo.toml
deploy/playground/: Dockerfile  README.md  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
docker/ci/: Dockerfile
docs/: UX_TEST.md  index.html  node-api-compat.md  performance-analysis-2026-02-03.md  performance-deep-dive.md
examples/: README.md  run-all.js
examples/api-client/: client.js
examples/buffer-ops/: buffers.js
examples/cli-tool/: README.md  cli.js  package.json
examples/cookies/: main.js
examples/crypto-utils/: crypto.js  package.json
examples/data-pipeline/: main.js
examples/dev-server/: server.js
examples/docker/: Dockerfile  README.md
examples/env-loader/: .gitignore  index.js
examples/event-system/: events.js  package.json
examples/express-app/: package.json  pnpm-lock.yaml  server.js
examples/file-processor/: package.json  processor.js
examples/http-server/: README.md  package.json  server-json.js  server.js
examples/job-queue/: queue.js
examples/json-db/: db.js  demo.json  package.json
examples/lru-cache/: cache.js  package.json
examples/markdown/: md.js  output.html
examples/markdown-api/: main.js
examples/nextjs-app/: package.json  pnpm-lock.yaml
examples/os-info/: os.js
examples/parallel-compute/: main.js
examples/playground/: package.json  server.js
examples/proxy-server/: package.json  proxy.js
examples/rate-limiter/: limiter.js
examples/react-app/: .gitignore  README.md  package.json  server.js
examples/real-time-game/: main.js
examples/remix-app/: package-lock.json  package.json  pnpm-lock.yaml  remix.config.js  server.js
examples/sass-app/: index.html  main.js  styles.scss
examples/ssr-app/: server.js
examples/static-server/: package.json  server.js
examples/static-site/: build.js
examples/stream-pipeline/: package.json  streams.js
examples/sveltekit-app/: .gitignore  package.json  server.js
examples/task-scheduler/: scheduler.js
examples/template-engine/: package.json  template.js
examples/test-runner/: runner.js
npm/: README.md  install.js  package.json
scripts/: bench-install.sh  dev-release.sh  dev.sh  smoke.ps1  smoke.sh  test_ts_compat.sh
tests/: atomics_test.js  css_processing_test.js  dns_test.js  readline_test.js  sab_clone_test.js  sass_test.js  scrypt_test.js  tls_test.js  worker_broadcast_channel_test.js  worker_data_test.js  worker_receive_message_test.js  worker_resource_limits_test.js  worker_sab_simple_test.js  worker_shared_atomics_test.js  worker_structured_clone_test.js
tests/docker/: Dockerfile  (+1 more)
(+119 files in other folders)
