[package]
name = "fastnode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for howth: a deterministic Node toolchain inspector"
default-run = "howth"

[[bin]]
name = "howth"
path = "src/main.rs"

[[bin]]
name = "fastnode"
path = "src/compat.rs"

[features]
default = []
native-runtime = ["fastnode-runtime", "fastnode-daemon/runtime", "url"]

[dependencies]
fastnode-core = { workspace = true, features = ["swc"] }
fastnode-daemon.workspace = true
fastnode-proto.workspace = true
fastnode-util.workspace = true
fastnode-runtime = { workspace = true, optional = true }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
notify.workspace = true
walkdir.workspace = true
which = "7"
url = { workspace = true, optional = true }
dunce = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tempfile.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
flate2.workspace = true
tar.workspace = true
serial_test.workspace = true
