[package]
name = "fastnode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for fastnode: errors, versioning, paths, config"

[features]
default = []

[dependencies]
thiserror.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs-next.workspace = true
dunce = "1.0"
tempfile.workspace = true
fastnode-util.workspace = true
reqwest.workspace = true
flate2.workspace = true
tar.workspace = true
bytes.workspace = true
url.workspace = true
tokio.workspace = true
blake3.workspace = true
walkdir.workspace = true
rayon.workspace = true
futures.workspace = true
glob = "0.3"
lightningcss = "1.0.0-alpha.57"
grass = "0.13"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Custom JS parser (arena-allocated, Bun-style speed)
howth-parser = { path = "../howth-parser", features = ["full"] }
rustc-hash = "2.1.1"


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
serial_test = "3.2"
