[package]
name = "fastnode-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Long-running daemon for fastnode"

[dependencies]
fastnode-core.workspace = true
fastnode-proto.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
notify.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
