[package]
name = "fastnode-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Long-running daemon for fastnode"

[features]
default = []
runtime = ["fastnode-runtime"]

[dependencies]
fastnode-core.workspace = true
fastnode-proto.workspace = true
fastnode-runtime = { path = "../fastnode-runtime", optional = true }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
notify.workspace = true
futures.workspace = true
rayon.workspace = true
dunce = "1.0"

[dev-dependencies]
tempfile.workspace = true
