[package]
name = "fastnode-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native JavaScript runtime for howth (V8-based via deno_core)"

[dependencies]
deno_core = "0.311"
deno_node = "0.166"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
fastnode-core = { workspace = true, features = ["swc"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
