[package]
name = "fastnode-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native JavaScript runtime for howth (V8-based via deno_core)"

[dependencies]
deno_core = "0.311"
deno_napi = "0.100"
napi_sym = { path = "../napi-sym" }
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio.workspace = true
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
bytes = "1.5"
lazy_static = "1.4"
dashmap = "6"
crossbeam-channel = "0.5"
socket2 = { version = "0.5", features = ["all"] }
notify = "6.1"
flate2 = "1.0"
regex = "1.10"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
fastnode-core = { workspace = true, features = ["swc"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
cbc = "0.1"
ctr = "0.9"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
pkcs8 = { version = "0.10", features = ["pem"] }
pkcs1 = { version = "0.7", features = ["pem"] }
rand = "0.8"
digest = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
